fix card overlapping on small devices

--- a/style.css
+++ b/style.css
@@ -883,13 +883,14 @@ Offer Section
   .card {
     width: 100%;
     height: 20em;
-    margin-bottom: 2em;
+    height: auto;
   }
 
   .card:hover {
     box-shadow: none;
   }
 }
+
 /*
 
 
